Code improvements in test classes to reduce some code smells